--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -2,8 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  // // margin: 0 20px;
-  // background-color: #212428;
+  margin-top: 20px;
 
   &__left{
     img{
@@ -22,10 +21,6 @@
         color: #ADB7C4;
         text-decoration: none;
         transition: all 0.5s ease-in;
-
-        &:nth-child(1){
-          color: #FCFFFF;
-        }
 
         &:hover{
           color: #FE014F;
