--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -3,6 +3,12 @@
   justify-content: space-between;
   align-items: center;
   margin-top: 20px;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background: #121212;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Adds a subtle shadow for depth */
+  
 
   &__left{
     img{
