--- a/src/layout/LayoutAdmin/style.scss
+++ b/src/layout/LayoutAdmin/style.scss
@@ -1,10 +1,23 @@
-.wrap-logo{
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-  img{
-    width: 50%;
+.admin {
+  font-family: "Roboto", sans-serif;
+}
+
+.admin * {
+  font-family: inherit; /* Tất cả các thành phần con thừa hưởng font-family từ .admin */
+}
+
+.admin{
+  .wrap-logo{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+    img{
+      width: 50%;
+    }
   }
 }
+
