--- a/src/components/Client/Footer/style.scss
+++ b/src/components/Client/Footer/style.scss
@@ -1,7 +1,6 @@
 .footer{
-  // padding: 20px;
+  margin-bottom: 0;
   margin-top: 50px;
-  // padding-bottom: 20px;
   color: #C4CFDE;
   font-size: 14px;
   text-align: center;
