--- a/src/components/Client/Header/style.scss
+++ b/src/components/Client/Header/style.scss
@@ -13,6 +13,7 @@ html {
   background: #121212;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Adds a subtle shadow for depth */
   overflow: hidden;
+  margin-top: 0;
   
 
   &__left{
