--- a/src/components/Admin/Upload/style.scss
+++ b/src/components/Admin/Upload/style.scss
@@ -1,3 +1,5 @@
-.ant-upload-wrapper.ant-upload-picture-card-wrapper .ant-upload-list.ant-upload-list-picture-card .ant-upload-list-item-container, .ant-upload-wrapper.ant-upload-picture-card-wrapper .ant-upload.ant-upload-select{
-  width: 100%;
+.upload{
+  .ant-upload-wrapper.ant-upload-picture-card-wrapper .ant-upload-list.ant-upload-list-picture-card .ant-upload-list-item-container, .ant-upload-wrapper.ant-upload-picture-card-wrapper .ant-upload.ant-upload-select{
+    width: 100%;
+  }
 }
