--- a/src/components/Client/Features/style.scss
+++ b/src/components/Client/Features/style.scss
@@ -16,6 +16,10 @@
     margin-bottom: 30px;
   }
 
+  h2{
+    text-align: left;
+  }
+
   .box{
     color: #C4CFDE;
     background: linear-gradient(to right bottom, #212428, #16181c);
