--- a/src/components/Client/Introduce/style.scss
+++ b/src/components/Client/Introduce/style.scss
@@ -1,39 +1,53 @@
-.intro{
+.snoopy {
+  position: relative;
+  left: 65px;
+  width: 150px !important;
+}
+
+.avatar {
+  position: relative;
+  top: -90px;
+}
+
+.intro {
   margin: 0 50px;
   color: white;
 
-  img{
+  img {
     width: 100%;
   }
 
-  h3{
+  h3 {
     font-size: 18px;
     color: #C4CFDE;
     font-weight: 400;
   }
-  h1{
+
+  h1 {
     color: #FFFFFF;
     font-size: 50px;
     margin-top: 0;
 
-    span{
+    span {
       color: #FF014F;
     }
 
-    .Typewriter__wrapper, .Typewriter__cursor{
+    .Typewriter__wrapper,
+    .Typewriter__cursor {
       color: #FFFFFF;
     }
   }
-  p{
+
+  p {
     color: #C4CFDE;
     font-size: 16px;
   }
 
-  .wrap-icon{
+  .wrap-icon {
     text-transform: uppercase;
   }
 
-  .anticon{
+  .anticon {
     padding: 20px;
     background: linear-gradient(145deg, #1e2024, #23272b);
     margin-right: 20px;
@@ -43,24 +57,28 @@
 
   .anticon:hover {
     cursor: pointer;
-    transform: translateY(-10px); /* Adjusted to move slightly more */
-    background: linear-gradient(145deg, #2e3136, #3a3d41); /* New color for the hover effect */
+    transform: translateY(-10px);
+    /* Adjusted to move slightly more */
+    background: linear-gradient(145deg, #2e3136, #3a3d41);
+    /* New color for the hover effect */
   }
 
-  [stroke="currentColor"]{
+  [stroke="currentColor"] {
     padding: 20px;
     background: linear-gradient(145deg, #1e2024, #23272b);
     margin-right: 20px;
     border-radius: 10px;
-    transition: all ease-out 0.4s ;
-    
+    transition: all ease-out 0.4s;
+
   }
-  
+
 
   [stroke="currentColor"]:hover {
     cursor: pointer;
-    transform: translateY(-10px); /* Adjusted to move slightly more */
-    background: linear-gradient(145deg, #2e3136, #3a3d41); /* New color for the hover effect */
+    transform: translateY(-10px);
+    /* Adjusted to move slightly more */
+    background: linear-gradient(145deg, #2e3136, #3a3d41);
+    /* New color for the hover effect */
   }
 
 }
